Lots of UI work

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
 
   # App Dependencies
   package_info: ^0.3.2
+  flutter_statusbarcolor: any
 
 dev_dependencies:
   flutter_test:
@@ -38,6 +39,14 @@ flutter:
 
   assets:
     - images/header.png
+  fonts:
+    - family: GlacialIndifference
+      fonts:
+        - asset: fonts/GlacialIndifference-Regular.otf
+        - asset: fonts/GlacialIndifference-Bold.otf
+          weight: 700
+        - asset: fonts/GlacialIndifference-Italic.otf
+          style: italic
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
