--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,8 @@ dependencies:
   # App Dependencies
   package_info: ^0.3.2
   flutter_statusbarcolor: any
-  chewie_nbtx:
-    git:
-      url: git://github.com/NBTX/chewie_nbtx.git
-      ref: master
+  apollotv_player:
+    path: ../apollotv_player/
 
 dev_dependencies:
   flutter_test:
