redone the overview screen
Removed the tabcontroller, as it was causing a lot of errors, will be implemeting a card based ysstem in its place

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,8 @@ dependencies:
   # App Dependencies
   package_info: ^0.3.2
   flutter_statusbarcolor: any
-  apollotv_player:
-    path: ../apollotv_player/
+  #apollotv_player:
+  #  path: ../apollotv_player/
 
 dev_dependencies:
   flutter_test:
