--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
       ref: master
 
 dev_dependencies:
+  flutter_rating: ^0.0.1
   flutter_test:
     sdk: flutter
 
@@ -39,13 +40,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
   assets:
+    - assets/images/no_image_detail.jpg
     - images/header.png
     - images/easteregg/background.jpg
     - images/easteregg/socks.png
