--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,10 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+.idea/workspace.xml
+.idea/modules.xml
+.idea/misc.xml
+.idea/libraries/Flutter_Plugins.xml
+.idea/libraries/Dart_SDK.xml
+.idea/libraries/Dart_Packages.xml
+.idea/codeStyles/Project.xml
