--- a/lib/api.dart.example
+++ b/lib/api.dart.example
@@ -1,3 +1,11 @@
-// This file contains project API keys.
-// DO NOT, under any circumstances, commit this file.
+/*
+   This file contains project API keys.
+   DO NOT, under any circumstances, commit this file.
+*/
+
+// This is the hostname for your claws instance, including the port and protocol.
+// Example: http://localhost:8080/
+final claws_instance = "";
+
+// This is your claws instance's API key.
 final claws_api_key = "";
