--- a/lib/api.dart.example
+++ b/lib/api.dart.example
@@ -3,9 +3,14 @@
    DO NOT, under any circumstances, commit this file.
 */
 
+/******* CLAWS SETTINGS *******/
 // This is the hostname for your claws instance, including the port and protocol.
 // Example: http://localhost:8080/
 final claws_instance = "";
 
 // This is your claws instance's API key.
 final claws_api_key = "";
+
+
+/******* TVDb SETTINGS *******/
+final tvdb_api_key = "";
