--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   uni_links: ^0.1.3
   dbcrypt: ^1.0.0
   shared_preferences: ^0.4.3
+  intl: ^0.15.7
   eventsource: #^0.2.0
     # Use this Git repository until
     # https://github.com/stevenroose/dart-eventsource/pull/4
