--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -11,6 +11,16 @@ if (flutterRoot == null) {
     throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
+def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
+if (flutterVersionCode == null) {
+    throw new GradleException("You have not defined a version code in the pubspec.yaml file. Please check the file for version guidelines.")
+}
+
+def flutterVersionName = localProperties.getProperty('flutter.versionName')
+if(flutterVersionName == null) {
+    throw new GradleException("You have not defined a version name in the pubspec.yaml file. Please check the file for version guidelines.")
+}
+
 apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
@@ -26,8 +36,8 @@ android {
         applicationId "xyz.apollotv.kamino"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode flutterVersionCode.toInteger()
+        versionName flutterVersionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
