--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,11 @@ dependencies:
   auto_size_text: ^0.2.1
   package_info: ^0.3.2
   flutter_statusbarcolor: any
+  cplayer:
+    # Clone the GitHub repository at: https://github.com/ApolloTVofficial/cplayer
+    # into ../cplayer/
+    path: ../cplayer/
   uni_links: ^0.1.3
-  sqflite: ^0.12.2
   dbcrypt: ^1.0.0
   shared_preferences: ^0.4.3
   intl: ^0.15.7
