--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   auto_size_text: ^0.2.1
   # For more information visit: https://apollotv.gitbook.io/kamino/setting-up-your-repository
   cplayer:
-    path: "../cplayer"
+    path: "cplayer"
   package_info: ^0.3.2
   flutter_statusbarcolor: any
   uni_links: ^0.1.3
